<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp" >
    

    <TimePicker
        android:id="@+id/timePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </TableLayout>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_characteristic"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp" >

        <RadioGroup
            android:id="@+id/depo_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/string_normal" />

            <RadioButton
                android:id="@+id/solid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_solid" />

            <RadioButton
                android:id="@+id/soft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_soft" />
            
            <RadioButton
                android:id="@+id/fluid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_fluid" />
            
            <RadioButton
                android:id="@+id/pee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_pee" />
            
            <RadioButton
                android:id="@+id/dry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_dry" />
            
            <RadioButton
                android:id="@+id/other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_other" />
        </RadioGroup>

    </TableLayout>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comments_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TableLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="10sp">

         <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/comments_new" >

        		</EditText>

        </TableLayout>
    
    </LinearLayout>
    
    </ScrollView>

</LinearLayout>