<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meal_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp" >

        <RadioGroup
            android:id="@+id/meal_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/breakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/string_breakfast" />

            <RadioButton
                android:id="@+id/snack_am"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_snackam" />

            <RadioButton
                android:id="@+id/lunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_lunch" />
            
            <RadioButton
                android:id="@+id/snack_pm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_snackpm" />
            
            <RadioButton
                android:id="@+id/dinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_dinner" />
        </RadioGroup>

    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="How much?"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TableLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp">

        <RadioGroup
            android:id="@+id/howmuch_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/tasted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Just tasted it" />

            <RadioButton
                android:id="@+id/something"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Something" />

            <RadioButton
                android:id="@+id/half"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Half" />
            
            <RadioButton
                android:id="@+id/almost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Almost everything" />
            
            <RadioButton
                android:id="@+id/all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="All" />
        </RadioGroup>
    
    </TableLayout>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Want to specify a meal?"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TableLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="10sp">

         <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Subway" >
        		</EditText>

        </TableLayout>
    
    </LinearLayout>
    
    </ScrollView>

</LinearLayout>