<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:background="@color/grey"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/back_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="Group 1"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="@color/black_mate"
            android:textSize="20dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0sp"
        android:layout_margin="5sp"
        android:layout_weight="9"
        android:orientation="vertical" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_kid" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableLayout
                    android:id="@+id/observations_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/obs_title"
                        android:textColor="@color/grey_mate"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:id="@+id/observation_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >
                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/obs_add"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <Button
                            android:id="@+id/obs_add_button"
                            android:layout_width="wrap_content"
                            android:layout_height="40sp"
                            android:layout_centerVertical="true"
                            android:text="@string/obs_new"
                            android:textColor="@color/grey_mate"
                            android:textSize="15sp" />
                    </RelativeLayout>
                </TableLayout>

                <TableLayout
                    android:id="@+id/meals_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meal_title"
                        android:textColor="@color/grey_mate"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:id="@+id/meals_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >
                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/meals_add"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <Button
                            android:id="@+id/meals_add_button"
                            android:layout_width="wrap_content"
                            android:layout_height="40sp"
                            android:layout_centerVertical="true"
                            android:text="@string/meal_new"
                            android:textColor="@color/grey_mate"
                            android:textSize="15sp" />
                    </RelativeLayout>
                </TableLayout>

                <TableLayout
                    android:id="@+id/naps_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nap_title"
                        android:textColor="@color/grey_mate"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:id="@+id/naps_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >
                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/naps_add"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <Button
                            android:id="@+id/naps_add_button"
                            android:layout_width="wrap_content"
                            android:layout_height="40sp"
                            android:layout_centerVertical="true"
                            android:text="@string/nap_new"
                            android:textColor="@color/grey_mate"
                            android:textSize="15sp" />
                    </RelativeLayout>
                </TableLayout>

                <TableLayout
                    android:id="@+id/stools_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stool_title"
                        android:textColor="@color/grey_mate"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:id="@+id/stools_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >
                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/stools_add"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <Button
                            android:id="@+id/stools_add_button"
                            android:layout_width="wrap_content"
                            android:layout_height="40sp"
                            android:layout_centerVertical="true"
                            android:text="@string/stool_new"
                            android:textColor="@color/grey_mate"
                            android:textSize="15sp" />
                    </RelativeLayout>
                </TableLayout>
            </TableLayout>
        </ScrollView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0sp"
        android:layout_weight="2"
        android:orientation="horizontal" >

        <Button 
    			android:id="@+id/journal_button"
    			android:layout_height="fill_parent"
    			android:layout_width="0dip"
    			android:layout_weight="1"
    			android:background="@drawable/journals_icon"
    		/>
    		
    		<Button 
    			android:id="@+id/message_button"
    			android:layout_height="fill_parent"
    			android:layout_width="0dip"
    			android:layout_weight="1"
    			android:background="@drawable/messages_icon"
    		/>
    		
    		<Button 
    			android:id="@+id/announcement_button"
    			android:layout_height="fill_parent"
    			android:layout_weight="1"
    			android:layout_width="0dip"
    			android:background="@drawable/announcements_icon"
    		/>
    		
    		<Button 
    			android:id="@+id/calendar_button"
    			android:layout_width="0dip"
    			android:layout_height="fill_parent"
    			android:layout_weight="1"
    			android:background="@drawable/calendar_icon"
    		/>
    </LinearLayout>

</LinearLayout>